--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 
 body {
   background-color: var(--primary-color);
-  background-image: url('/images/bg-mobile.svg');
+  background-image: url('../images/bg-mobile.svg');
   background-repeat: no-repeat;
   background-size: contain;
 }
